--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/next-auth": "^3.15.0"
   }
 }
